# generative-ai-slides

./: README.md
assets/: header.json  header.jsonp
assets/11762E8E-C2FD-4107-BBFD-FD4CA16CC89F/: 11762E8E-C2FD-4107-BBFD-FD4CA16CC89F.json  11762E8E-C2FD-4107-BBFD-FD4CA16CC89F.jsonp
assets/11FB88B3-4B30-4744-AD97-8A9C61551111/: 11FB88B3-4B30-4744-AD97-8A9C61551111.json  11FB88B3-4B30-4744-AD97-8A9C61551111.jsonp
assets/2E3387E7-16F6-4AAB-ADC8-C262CDCB492B/: 2E3387E7-16F6-4AAB-ADC8-C262CDCB492B.json  2E3387E7-16F6-4AAB-ADC8-C262CDCB492B.jsonp
assets/33810D07-65AD-42B0-A1FB-C3232E122AA1/: 33810D07-65AD-42B0-A1FB-C3232E122AA1.json  33810D07-65AD-42B0-A1FB-C3232E122AA1.jsonp
assets/42636DDC-8EFB-4219-BF26-3CAD8FDB4076/: 42636DDC-8EFB-4219-BF26-3CAD8FDB4076.json  42636DDC-8EFB-4219-BF26-3CAD8FDB4076.jsonp
assets/4D40ED83-3F67-4BDB-A4A3-1A48A7F280A9/: 4D40ED83-3F67-4BDB-A4A3-1A48A7F280A9.json  4D40ED83-3F67-4BDB-A4A3-1A48A7F280A9.jsonp
assets/521AF831-B4CC-4F8C-B6A0-6432F9C30794/: 521AF831-B4CC-4F8C-B6A0-6432F9C30794.json  521AF831-B4CC-4F8C-B6A0-6432F9C30794.jsonp
assets/5D791281-1E5E-4705-A47B-D8E1CC3CF16C/: 5D791281-1E5E-4705-A47B-D8E1CC3CF16C.json  5D791281-1E5E-4705-A47B-D8E1CC3CF16C.jsonp
assets/5F14834B-7DE7-4188-BA4F-71BB0F3C8422/: 5F14834B-7DE7-4188-BA4F-71BB0F3C8422.json  5F14834B-7DE7-4188-BA4F-71BB0F3C8422.jsonp
assets/6481CC38-D653-4601-8DC5-E46E8105B4EC/: 6481CC38-D653-4601-8DC5-E46E8105B4EC.json  6481CC38-D653-4601-8DC5-E46E8105B4EC.jsonp
demo/: Cargo.toml
demo/src/: image.rs  llama.rs  nlp.rs  sentencepiece.rs
(+43 files in other folders)
