[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nlp"
path = "src/nlp.rs"

[[bin]]
name = "image"
path = "src/image.rs"

[[bin]]
name = "llama"
path = "src/llama.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.21.0"
diffusers="0.3.1"
clap= { version= "4.4.4", features = ["derive"]}
tch ="0.13.0"
anyhow="1.0.75"
regex="1.9.5"
qdrant-client = "1.2.0"
rnltk = "0.4.0"
memmap2 = "0.7.1"
serde_json = "1.0.107"
safetensors = "0.3.3"
